# app/Http/Resources/Admin/UserResource.php
@@ -1,25 +1,0 @@
-<?php
-
-namespace App\Http\Resources\Admin;
-
-use Illuminate\Http\Resources\Json\JsonResource;
-
-class UserResource extends JsonResource
-{
-    /**
-     * Transform the resource into an array.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
-     */
-    public function toArray($request)
-    {
-        return[
-            'mobile' => $this->mobile,
-            'first_name' => $this->first_name,
-            'last_name' => $this->last_name,
-            'job_title' => $this->job_title,
-            'avatar' => $this->avatar,
-        ];
-    }
-}
